--- a/examples/emotion/package.json
+++ b/examples/emotion/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@properly-styled/core": "0.0.1",
-    "@properly-styled/styles": "0.0.1",
+    "@properly-styled/core": "^0.0.2",
+    "@properly-styled/styles": "^0.0.2",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.17",
