--- a/examples/emotion/package.json
+++ b/examples/emotion/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.10",
     "@emotion/styled": "^10.0.10",
-    "@properly-styled/core": "^0.0.2",
+    "@properly-styled/emotion": "^0.0.2",
     "@properly-styled/styles": "^0.0.2",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
